external-crates/move/move-compiler/tests/move_check/parser/spec_parsing_lambda_fail.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:2:24
  │
2 │     fun lambda_in_prog(x: u64) {
  │                        ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'

error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/parser/spec_parsing_lambda_fail.move:3:15
  │
3 │       let _ = |y| x + y;
  │               ^^^^^^^^^ lambda expression only allowed in specifications

